--- a/ng-points/src/app/map/map.component.html
+++ b/ng-points/src/app/map/map.component.html
@@ -3,9 +3,16 @@
 
 
 
+<input id="pac-input" class="controls" type="text" placeholder="Search Box">
+<div id="map"></div>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlGiXVuPciR5PfsTMRARFFN6BZM-x8EOM&libraries=places&callback=initAutocomplete" async defer></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=fr"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 
 
 
 
 
-<app-selectedpoint [selectedTopic]="selectedTopic"></app-selectedpoint>
+
+
+<app-point-form></app-point-form>
