ajout de la carte et du champ de recherche

--- a/ng-points/src/app/map/map.component.html
+++ b/ng-points/src/app/map/map.component.html
@@ -1,11 +1,2 @@
-
-
-
-
-
-
-
-
-
-
-<app-selectedpoint [selectedTopic]="selectedTopic"></app-selectedpoint>
+<input id="pac-input" class="controls" type="text" placeholder="Search Box">
+<div id="map"></div>
