--- a/ng-points/src/app/map/map.component.html
+++ b/ng-points/src/app/map/map.component.html
@@ -3,8 +3,12 @@
 
 
 
-<input id="pac-input" class="controls" type="text" placeholder="Search Box">
-<div id="map"></div>
+<div id="map">
+</div>
+
+
+  <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+
 
 
 
