--- a/ng-points/src/app/map/map.component.html
+++ b/ng-points/src/app/map/map.component.html
@@ -3,15 +3,10 @@
 
 
 
-<div id="map">
-</div>
+<div id="map"></div>
 
 
-  <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-
-
-
-
+<input id="pac-input" class="controls" type="text" placeholder="Search Box">
 
 
 
