--- a/ng-points/src/app/map/map.component.html
+++ b/ng-points/src/app/map/map.component.html
@@ -3,13 +3,7 @@
 
 
 
-<div id="map"></div>
+<div id="map" #injectComponent></div>
 
 
 <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-
-
-
-
-
-
