--- a/ng-points/src/app/points/points.component.html
+++ b/ng-points/src/app/points/points.component.html
@@ -1,5 +1,5 @@
 
-<app-point-form (eventEmitter)="updateList($event)"> </app-point-form>
+<app-point-form (createPointEvent)="updateList($event)"> </app-point-form>
 <h3>List of Points of Interest</h3>
 
 <table>
@@ -16,7 +16,7 @@
     <td>      {{point.longitude}}</td>
     <td>      {{point.address}}</td>
     <td>      {{point.description}}</td>
-    <td>      <app-selectedpoint [pointSelected]="point" (eventEmitterSelectedPoint)="updateListRevome(i)"></app-selectedpoint></td>
+    <td>      <app-selectedpoint [pointSelected]="point" (removePoint)="updateListRemove($event)"></app-selectedpoint></td>
   </tr>
 
 
