--- a/ng-points/src/app/selectedpoint/selectedpoint.component.html
+++ b/ng-points/src/app/selectedpoint/selectedpoint.component.html
@@ -1,3 +1,3 @@
-<button type="button" (click) = "supprimerPoint(pointSelected.id) ">supprimer</button>
+<button type="button" (click) = "supprimerPoint(pointSelected) ">supprimer</button>
 
 
