--- a/ng-points/src/app/points/points.component.html
+++ b/ng-points/src/app/points/points.component.html
@@ -1,5 +1,5 @@
 
-<app-point-form (createPointEvent)="updateList($event)"> </app-point-form>
+<app-point-form  (createPointEvent)="updateList($event)"> </app-point-form>
 <h3>List of Points of Interest</h3>
 
 <table id="poiTable">
@@ -20,5 +20,5 @@
 
 </table>
 
-<app-map [pointsFromPointsComponent]="getPoints()"></app-map>
+<app-map (updatePointMap)="initPointMap()" [pointsFromPointsComponent]="getPoints()"></app-map>
 
