--- a/ng-points/src/app/selectedpoint/selectedpoint.component.html
+++ b/ng-points/src/app/selectedpoint/selectedpoint.component.html
@@ -1,3 +1,1 @@
-<button type="button" (click) = "supprimerPoint(pointSelected) ">supprimer</button>
-
-
+<button type="button" (click) = "deletePoint(pointSelected) ">Delete</button>
