--- a/ng-points/src/styles.css
+++ b/ng-points/src/styles.css
@@ -497,3 +497,20 @@ html, body {
 #target {
   width: 345px;
 }
+
+#app-points{
+  display: flex;
+}
+
+.section-result {
+  cursor: pointer;
+  box-sizing: border-box;
+  min-height: 112px;
+  padding: 10px 18px 10px 24px;
+  -webkit-flex: none;
+  -ms-flex: none;
+  flex: none;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
