close #8 Connecting address and coordinate

--- a/ng-points/src/app/points/points.component.html
+++ b/ng-points/src/app/points/points.component.html
@@ -18,5 +18,5 @@
 
 </table>
 
-<app-map (updatePointMap)="initPointMap()" [pointsFromPointsComponent]="getPoints()"></app-map>
+<app-map [pointsFromPointsComponent]="getPoints()"></app-map>
 <app-point-form (createPointEvent)="updateList($event)"> </app-point-form>
