FUSION Done : login creation of user poi with writer

--- a/ng-points/src/app/app.component.html
+++ b/ng-points/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div >
   <h1>
-    Welcome to {{title}}, {{logged.login}} !
+    Welcome to {{title}}, {{logged?.login}} !
   </h1>
+  <a href="http://localhost:8080/poi/disconnect">Log out</a>
 </div>
 <br>
 <app-points></app-points>
