--- a/ng-points/src/app/selectedpoint/selectedpoint.component.html
+++ b/ng-points/src/app/selectedpoint/selectedpoint.component.html
@@ -1,1 +1,7 @@
-<button type="button" (click) = "deletePoint(pointSelected) ">Delete</button>
+
+
+<span *ngIf="pointSelected.user.login===logged?.login">
+
+  <button type="button" (click) = "deletePoint(pointSelected) ">Delete</button>
+</span>
+
