--- a/ng-points/src/app/map/map.component.html
+++ b/ng-points/src/app/map/map.component.html
@@ -1,3 +1,4 @@
 <input id="pac-input" class="controls" type="text" placeholder="Search Box">
 <div id="map" #injectComponent></div>
+<button type="button" (click)="createLine()">créer ligne</button>
 
